# lingva-latina-i

./: Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: .pages  index.md  progress.md
docs/capitula/CAP_01/: .pages  vocabulum.md
docs/capitula/CAP_01/exercitia/: pensvm_1.md
docs/stylesheets/: extra.css
hooks/: progress.py
progress/: progress.json
